--- a/requirements.txt
+++ b/requirements.txt
@@ -5,16 +5,19 @@ annotated-types==0.7.0
 anyio==3.7.1
 astroid==3.0.3
 attrs==25.3.0
-black==23.11.0
+black==24.3.0
+boolean.py==5.0
 cachetools==5.5.2
 certifi==2025.6.15
 cfgv==3.4.0
 charset-normalizer==3.4.2
 click==8.2.1
 coverage==7.9.1
+cyclonedx-python-lib==9.1.0
+defusedxml==0.7.1
 dill==0.4.0
 distlib==0.3.9
-fastapi==0.104.1
+fastapi
 filelock==3.18.0
 frozenlist==1.7.0
 google-ai-generativelanguage==0.4.0
@@ -57,22 +60,27 @@ pre-commit==3.6.0
 propcache==0.3.2
 proto-plus==1.26.1
 protobuf==4.25.8
+py-serializable==2.0.0
 pyasn1==0.6.1
-pyasn1_modules==0.4.2
+pyasn1-modules==0.4.2
 pydantic==2.5.0
-pydantic_core==2.14.1
+pydantic-core==2.14.1
+pygments==2.19.1
 pylint==3.0.3
 pytest==7.4.3
 pytest-cov==4.1.0
 python-dotenv==1.0.0
-PyYAML==6.0.2
-requests==2.31.0
+pyyaml==6.0.2
+requests==2.32.4
 requests-toolbelt==1.0.0
+rich==14.0.0
 rsa==4.9.1
 sniffio==1.3.1
-SQLAlchemy==2.0.23
-starlette==0.27.0
+sortedcontainers==2.4.0
+sqlalchemy==2.0.23
+starlette
 tenacity==8.5.0
+toml==0.10.2
 tomlkit==0.13.3
 tqdm==4.67.1
 typing_extensions==4.14.0
